<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ProjetoPrincipal">

        <TextView
            android:id="@+id/text_categorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/text_categorias"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/imagemprincipal"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/text_categorias" />

        <LinearLayout
            android:id="@+id/container_categorias"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shape_container_categorias"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_chat"
                        android:layout_width="match_parent"
                        android:layout_height="124dp"
                        app:cardBackgroundColor="@color/azul_claro"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingHorizontal="20dp"
                            android:text="@string/text_chat"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="79dp"
                            android:layout_height="83dp"
                            android:layout_gravity="end"
                            android:src="@drawable/botaochat" />

                    </androidx.cardview.widget.CardView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <androidx.cardview.widget.CardView
                        android:id="@id/card_ajustes"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        app:cardBackgroundColor="@color/teal_700"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingHorizontal="20dp"
                            android:text="@string/text_ajustes"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="65dp"
                            android:layout_height="59dp"
                            android:layout_gravity="end"
                            android:src="@drawable/botaoajustes" />

                    </androidx.cardview.widget.CardView>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_ajuda"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        app:cardBackgroundColor="@color/meio_azul"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingHorizontal="20dp"
                            android:text="@string/text_ajuda"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="59dp"
                            android:layout_gravity="end"
                            android:src="@drawable/botaoajuda" />

                    </androidx.cardview.widget.CardView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_sair"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        app:cardBackgroundColor="@color/azul_escuro"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingHorizontal="20sp"
                            android:text="@string/text_sair"
                            android:textColor="@color/white"
                            android:textSize="22dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="65dp"
                            android:layout_height="57dp"
                            android:layout_gravity="end"
                            android:src="@drawable/botaosair" />

                    </androidx.cardview.widget.CardView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_ajustes"
                android:layout_width="158dp"
                android:layout_height="120dp"
                app:cardBackgroundColor="@color/azul"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/text_ajustes"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="83dp"
                    android:layout_height="67dp"
                    android:layout_gravity="end"
                    android:src="@drawable/botaoajustes" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="-41dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="-24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="-18dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="-18dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>